<resources>
    <string name="app_name">BasicCVApli</string>
    <string name="generatepdf">GENERATE PDF</string>
    <string name="Internships">INTERNSHIPS</string>
    <string name="educationQUalification">EDUCATIONAL QUALIFICATION</string>
    <string name="experience">EXPERIENCE</string>
    <string name="skills">SKILLS</string>
    <string name="education">EDUCATION</string>
    <string name="personalDetails">PERSONAL DETAILS</string>

    <string name="companyname">Company Name</string>
    <string name="industry">Industry</string>
    <string name="designation">Designation</string>
    <string name="location">Location</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="addExperience">ADD EXPERIENCE</string>
    <string name="click_to_set_the_date">Click to set the date</string>
    <string name="add_experience">Add Experience</string>
    <string name="experiences">Experiences</string>
    <string name="updatedetails">Update Details</string>
    <string name="institutename">Institute Name</string>
    <string name="fieldofstudy">Field Of Study</string>
    <string name="name">NAME</string>
    <string name="gender">GENDER</string>
    <string name="dob">DOB</string>
    <string name="email">EMAIL</string>
    <string name="aadharnumber">Aadhar Number</string>
    <string name="maritialstatus">MARITIAL STATUS</string>
    <string name="hometown">Home Town</string>
    <string name="pincode">Pincode</string>
    <string name="permanentaddress">Permanent Adddress</string>
    <string name="skillName">Skill Name</string>
    <string name="addSkill">ADD SKILL</string>
    <string name="addInternship">ADD INTERNSHIP</string>

    <string name="proficiency">PROFICIENCY LEVEL</string>
    <string name="basic">BASIC</string>
    <string name="medium">MEDIUM</string>
    <string name="expert">EXPERT</string>

    <string-array name="skillsList">
        <item>@string/proficiency</item>
        <item>@string/basic</item>
        <item>@string/medium</item>
        <item>@string/expert</item>
    </string-array>

    <string name="secEd">SECONDARY EDUCATION</string>
    <string name="senSec">SENIOR SECONDARY</string>
    <string name="bachelors">BACHELORS</string>
    <string name="masters">MASTERS</string>
    <string name="doctorate">DOCTRATE</string>


    <string-array name="educationType">
        <item>@string/secEd</item>
        <item>@string/senSec</item>
        <item>@string/bachelors</item>
        <item>@string/masters</item>
        <item>@string/doctorate</item>
    </string-array>

    <string name="percentage">PERCENTAGE</string>
    <string name="cgpa">CGPA</string>
    <string name="sgpa">SGPA</string>
    <string name="create_account">Create account</string>
    <string name="sign_out">Sign out</string>

    <string-array name="marksType">
        <item>@string/percentage</item>
        <item>@string/cgpa</item>
        <item>@string/sgpa</item>
    </string-array>

    <string-array name="genderList">
        <item>"MALE"</item>
        <item>"FEMALE"</item>
        <item>"OTHER"</item>
    </string-array>

    <string-array name="maritalList">
        <item>"MARRIED"</item>
        <item>"UNMARRIED"</item>
        <item>"DIVORCED"</item>
    </string-array>

    <string name="signin">SignIn</string>
    <string name="login">Login</string>
    <string name="logo">Logo</string>
    <string name="apli_ai">Apli AI</string>
    <string name="enter_phone_number_with_code_for_otp">Enter phone number with country code.</string>
    <string name="submit">Submit</string>
    <string name="submit_code">Verify code</string>
    <string name="enter_the_code_for_verification">Enter the code for verification.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detailsCompletedKey">DetailsCompletedKey</string>
    <string name="full_name">Full name</string>

</resources>
